<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="331dp"
        android:layout_height="54dp"
        android:layout_marginTop="16dp"
        android:text="@string/bienvenue_dans_l_application_gestion_de_stockage_de_camera"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="351dp"
        android:layout_height="161dp"
        android:layout_marginTop="28dp"
        android:text="@string/cette_application_r_alis_dans_le_cadre_de_l_ue_android_permet_de_tester_et_comprendre_comment_marche_le_stockage_interne_extrene_sur_android_et_pour_cela_on_vous_propose_de_prendre_et_enregistrer_un_photo_avec_deux_types_de_stockages_possibles"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="275dp"
        android:layout_height="63dp"
        android:layout_marginBottom="4dp"
        android:text="@string/r_alis_par_kourki_kamal_cadiou_justine"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="129dp"
        android:layout_height="56dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:onClick="stockageInterne"
        android:text="@string/stockage_interne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="125dp"
        android:layout_height="59dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:onClick="stockageExterne"
        android:text="@string/stockage_externe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>